--- a/Week1_1/Week1_1.vcxproj.filters
+++ b/Week1_1/Week1_1.vcxproj.filters
@@ -7,7 +7,7 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="main.cpp">
+    <ClCompile Include="Week1_1.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
