--- a/Week1_2/Week1_2.vcxproj.filters
+++ b/Week1_2/Week1_2.vcxproj.filters
@@ -7,7 +7,7 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="main.cpp">
+    <ClCompile Include="Week1_2.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
